[package]
name = "rmsync"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fanfictionnet = { path = "../crates/fanfictionnet" }
rmcloud = { path = "../crates/rmcloud" }
recipes = { path = "../crates/recipes" }
clap = "2.33"
dirs = "3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = [] }
env_logger = "0.8"
