[package]
name = "fanfictionnet"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features=["rustls-tls"], default-features = false }
log = "0.4"
ego-tree = "0.6"
thiserror = "1.0"
tokio = { version = "0.2", features = ["time"]}
