[package]
name = "gmail-watch"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
env_logger = "0.8"
tokio = { version = "0.2", features = ["macros", "fs"] }
log = "0.4"
fanfictionnet = { path = "../fanfictionnet" }
rmcloud = { path = "../rmcloud" }
google-cloud = { path = "../google-cloud" }
recipes = { path = "../recipes" }
serde_json = "1.0"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.13"
reqwest = { version = "0.10", features = ["json", "gzip"] }
futures = "0.3"
thiserror = "1.0"
regex = "1.0"
lazy_static = "1"
