[package]
name = "google-cloud"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "fs"] }
log = "0.4"
serde_json = "1.0"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["v4"] }
base64 = "0.13"
sodiumoxide = "0.2"
sha2 = "0.9"
gcp_auth = "0.3"
reqwest = { version = "0.10", features = ["json", "gzip"] }
futures = "0.3"
mime = "0.3"
httparse = "1.3"
thiserror = "1.0"
hex = "0.4"
hyper = "0.13.9"
