[package]
name = "rmcloud"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
hyper-tls = "0.4"
serde_json = "1.0"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
