[package]
name = "rmcloud"
version = "0.1.0"
authors = ["François Monniot <francoismonniot@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
serde_json = "1.0"
bytes = "0.5"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "0.2", features = ["fs"] }
zip = "0.5"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.10", features = ["json", "gzip", "rustls-tls"], default-features = false  }
thiserror = "1.0"
